--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,7 @@
     />
     <title>한기시스템</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="Layout.css" />
+    <link rel="stylesheet" href="Index.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -64,16 +64,16 @@
       </div>
     </nav>
 
-    <div class="container" style="height: calc(100vh - 100px)">
-      <p>아이디</p>
-      <input type="text" style="grid-column: 2/4" />
-      <button class="btn btn-outline-info" style="grid-row: 1 / span 2">
-        로그인
-      </button>
-      <p>비밀번호</p>
-      <input type="text" style="grid-column: 2/4" />
+    <div class="container">
+      <label class="label">아이디</label>
+      <input type="text" id="id" class="form-control" placeholder="id" />
+      <label class="label">패스워드</label>
+      <input type="text" id="pw" class="form-control" placeholder="pw" />
+      <button id="LoginButton" class="btn btn-primary">로그인</button>
+      <button id="LoginCancelButton" class="btn btn-primary">취소</button>
     </div>
 
+    <script src="Login.js"></script>
     <script src="jquery-3.6.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
