--- a/Main.html
+++ b/Main.html
@@ -9,7 +9,7 @@
     />
     <title>한기시스템</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="Layout.css" />
+    <link rel="stylesheet" href="Index.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -51,19 +51,16 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <button
-            class="btn btn-outline-info my-2 my-sm-0 mr-sm-2"
-            type="submit"
-          >
+          <button class="btn btn-primary my-2 my-sm-0 mr-sm-2" id="navLogin">
             로그인
           </button>
-          <button class="btn btn-outline-info my-2 my-sm-0" type="submit">
+          <button class="btn btn-primary my-2 my-sm-0" id="navSignUp">
             회원가입
           </button>
         </form>
       </div>
     </nav>
-
+    <script src="Main.js"></script>
     <script src="jquery-3.6.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
