--- a/Signup.html
+++ b/Signup.html
@@ -9,7 +9,8 @@
     />
     <title>한기시스템</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="Layout.css" />
+    <link rel="stylesheet" href="Index.css" />
+    <script src="MajorInfo.json" type="text/javascript"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -64,27 +65,40 @@
       </div>
     </nav>
 
-    <div class="container" style="height: calc(100vh - 100px)">
-      <p>아이디</p>
-      <input type="text" style="grid-column: 2/5" />
-      <p>비밀번호</p>
-      <input type="text" style="grid-column: 2/5" />
-      <p>비밀번호 확인</p>
-      <input type="text" style="grid-column: 2/5" />
-      <p>학번</p>
-      <input type="text" style="grid-column: 2/5" />
-      <p>전공</p>
-      <input type="text" style="grid-column: 2/5" />
-      <p>전화번호</p>
-
-      <input type="text" style="grid-column: 2/5" />
-
-      <div class="row justify-content-center" style="grid-column: 1/5">
-        <button class="btn btn-outline-info">회원가입</button>
-        <button class="btn btn-outline-info">취소</button>
-      </div>
+    <div class="container">
+      <label class="label">아이디</label>
+      <input type="email" id="id" class="form-control" placeholder="id" />
+      <label class="label">비밀번호</label>
+      <input type="password" id="pw" class="form-control" placeholder="pw" />
+      <label class="label">비밀번호 확인</label>
+      <input
+        type="password"
+        id="pw-check"
+        class="form-control"
+        placeholder="pw check"
+      />
+      <label class="label">학번</label>
+      <input
+        type="text"
+        id="student-number"
+        class="form-control"
+        placeholder="student-number"
+      />
+      <label class="label">전공</label>
+      <input type="text" id="major" class="form-control" placeholder="major" />
+      <label class="label">전화번호</label>
+      <input
+        type="text"
+        id="phone-number"
+        class="form-control"
+        placeholder="phone-number"
+        oninput="regexPhoneNumber(this)"
+      />
+      <button id="SignUpButton" class="btn btn-primary">회원가입</button>
+      <button id="CancelButton" class="btn btn-primary">취소</button>
     </div>
 
+    <script src="Signup.js"></script>
     <script src="jquery-3.6.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
