--- a/Signup.html
+++ b/Signup.html
@@ -98,7 +98,7 @@
       <button id="CancelButton" class="btn btn-primary">취소</button>
     </div>
 
-    <script src="Signup.js"></script>
+    <script src="./Signup.js"></script>
     <script src="jquery-3.6.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
