--- a/Login.html
+++ b/Login.html
@@ -73,7 +73,7 @@
       <button id="LoginCancelButton" class="btn btn-primary">취소</button>
     </div>
 
-    <script src="Login.js"></script>
+    <script src="./Login.js"></script>
     <script src="jquery-3.6.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
