--- a/Main.html
+++ b/Main.html
@@ -61,6 +61,10 @@
       </div>
     </nav>
 
+    <img id="cat" />
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="Main.js"></script>
     <script src="jquery-3.6.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
